--- a/Pagina.html
+++ b/Pagina.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="stile.css">
   <title>Projectile Motion</title>
 </head>
-<body onload="inizio()" style="background-color: transparent;">
-  <canvas id="canvas" width="700" height="500" style="border:1px solid #000000;"></canvas> <br>
+<body onload="inizio()">
+  <canvas id="canvas" width="700" height="500"></canvas> <br>
   <label>Angolo: </label>
-  <input type="number" id="angolo" name="angolo" value="45"> <br>
-  <label>Velocita Iniziale: </label>
-  <input type="number" id="velocita" name="velocita" value="30"> <br>
-  <button onclick="drawProjectileMotion()"> lancia </button>
+  <input type="number" id="angolo" name="angolo"> <br>
+  <label>Velocità: </label>
+  <input type="number" id="velocita" name="velocita"> <br>
+  <button onclick="drawProjectileMotion()" id="pulsante"> lancia </button> <br>
+  <p id="risultato"></p> <br>
 <script src="JavaScript.js"></script>
 </body>
 </html>
+
+
